--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="view-transition" content="same-origin" />    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -23,7 +24,9 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <%= render "layouts/navbar"%>
+    <%= render "layouts/flash_messages"%>
+    <main class="container mx-auto mt-28 px-5 flex justify-center">
       <%= yield %>
     </main>
   </body>
