Add turbo stream, frame features

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,6 @@
 <div>  
   <h1 class="font-bold text-4xl text-red-30">Kategoriler</h1>
+  <h1 class="flex justify-center"><%= render_icon "check",class:"bg-red-300 rounded-xl text-purple-200 my-10 w-30"%></h1>
    
   <br/>
   <ul class="outline-blue-100">
