--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag :flash_messages do %>
 <div class="bg-white-500">
   <% flash.each do |type,message|%>
     <div class="bg-<%= type == 'alert' ? 'red' : 'green'%>-300 font-bold mx-10 text-4xl mt-10 p-2 rounded-lg text-center">
@@ -5,3 +6,4 @@
     </div>
   <%end%>
 </div>
+<%end%>
